--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
   <body class="p-5">
-  <div class="container text-center p-5">
+  <div class="container text-center">
     <div class="landing">Hello, world!</div>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
