--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Maxten Media</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/MAXTEN-Dark.jpg"/>
   </head>
   <body class="p-5">
   <div class="container text-center">
     <div class="landing">Hello, world!</div>
+  </div>
+  <div class="container text-center d-none">
+    Copyright <script type="text/javascript">document. write(new Date(). getFullYear());</script>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
